--- a/Tesi pf/content.tex
+++ b/Tesi pf/content.tex
@@ -46,7 +46,7 @@ Dopo un breve ingaggio con Scott LaFaro (basso), Bobby Hutcherson (vibrafono) e 
 L'altro pianista chiamato a realizzare il progetto era Bill Evans, in quegli anni all'apice della sua popolarità dopo le registrazioni di \textit{\textbf{A Kind Of Blue}} [Columbia 1959]. Bley racconta stupito di come questi si era inaspettatamente rivelato in sintonia con le sue idee di sperimentazione e atonalità, tanto da preoccuparsi che Evans potesse rubargli la scena e lasciarlo senza lavoro. Con suo grande sollievo, però, Bley racconta che dopo le registrazioni andò ad ascoltare il trio di Evans al Village Vanguard per scoprire che il pianista, al di là dell'esperienza con Russell, non sembrava interessato ad allontanarsi da quella che era la sua zona di comfort\footcite[75]{stopping}.\par
 In questi anni Bley conobbe il bassista Steve Swallow, con il quale si ritrovò a suonare in diverse occasioni in duo. Contestualmente, fu anche chiamato dal chitarrista Jim Hall per sostituirlo in un trio con il clarinettista e sassofonista Jimmy Giuffre e il bassista Ralph Peña. Giuffre, così come Russell, aveva avuto modo di ascoltare Bley alla Lenox School of Jazz ed era intrigato dallo stile anticonvenzionale del pianista. In seguito all'abbandono di Peña, Bley convinse Giuffre ad assumere Swallow come bassista. Soddisfatto dal suono del trio, Giuffre portò il gruppo per una (sfortunata\footcite[77]{stopping}) tournee in Europa nel 1961. Dello stesso anno sono i due dischi che documentano questa iterazione dei \textit{Jimmy Giuffre 3}, cioè \textit{\textbf{Thesis}} [Verve 1961] e \textit{\textbf{Fusion}} [Verve 1961], in cui già si nota una prevalenza di brani scritti da Carla Bley (tendenza, questa, che non avrebbe mai abbandonato Paul nemmeno dopo la separazione).\\
 In seguito a una proposta di Herbie Hancock nel 1963 Bley fu ingaggiato da Sonny Rollins insieme a Henry Grimes (basso) e Roy McCurdy (batteria) per una serie di concerti, un tour in Giappone e Stati Uniti e un disco per la RCA con Coleman Hawkins, \textit{\textbf{Sonny meets Hawk!}} [RCA Victor 1963]. A differenza delle esperienze precedenti, il repertorio di Rollins era costituito principalmente da \textit{standard} seppur suonati con grande libertà armonica e strutturale. Questa occasione diede a Bley l'opportunità di misurarsi con un ulteriore approccio al linguaggio \textit{free}: il legame tra gli \textit{standard} e il pianista sarebbe continuato anche in seguito, fino alla fine della sua carriera.
-\section{La maturità artistica: il trio e il solo}
+\section{La maturità artistica: il trio, l'incontro con l'elettronica e il solo}
 Nel 1964 Bley fu assoldato dal bassista Gary Peacock per una doppia serata: il primo concerto insieme a John Gilmore (sax tenore) e a Paul Motian (batteria) e il secondo con Albert Ayler (sax tenore) e Sunny Murray (batteria)\footcite[89]{stopping}. L'esperienza con Murray, primo batterista \textit{free} con cui Bley avesse mai avuto a che fare, fu allo stesso tempo rivelatrice e traumatica, tanto che Bley dovette chiedere a Carla di riscrivere i propri brani affinché si adattassero meglio allo stile del batterista. Non a caso, Bley avrebbe poi nella propria carriera prediletto lo stile più controllato di Motian. Gli sforzi di questa fase della carriera di Bley sono documentati nei dischi \textit{\textbf{Turning point}} [Improvising Artists 1975] con il primo quartetto e \textit{\textbf{Barrage}} [ESP-disk 1964] con Marshall Allen (sax contralto), Dewey Johnson (tromba), Eddie Gomez (basso) e Milford Graves (batteria).\par
 Nello stesso anno Bley fu invitato dal trombettista Bill Dixon a prendere parte agli incontri dell'associazione Jazz Composer Guild. L'idea dell'associazione era quella di formare una sorta di sindacato per opporsi alle pratiche scorrette dei \textit{leader} delle formazioni e delle etichette discografiche. Seppur riluttante all'inizio\footnote{``L'incontro era un manipolo di anime in pena. Alla faccia della terapia di gruppo...'' \cite{stopping}, p. 91.}, Bley si ritrovò insieme al trombonista Roswell Rudd alla direzione dell'associazione in seguito alla defezione di Dixon. Durante questa nuova esperienza da organizzatore e gestore Bley riuscì a produrre diversi concerti e a guadagnare nuovi membri (tra tutti, il pianista Cecil Taylor). Il nuovo successo dell'organizzazione permetteva anche a musicisti meno noti, come a quel tempo il quintetto di Carla Bley con il trombettista (e futuro marito di Carla) Mike Mantler, di godere di un'utile visibilità. In quegli anni Carla Bley, sotto consiglio di Paul, potè utilizzare i leader delle formazioni nella Jazz Composer's Guild per formare la Jazz Composer's Orchestra Association insieme a Mantler. Bley ricorda ``Un'idea così buona da costarmi una moglie''\footcite[95]{stopping}, dato che nel 1965 Paul e Carla divorziarono.\par
 In seguito alla sofferta separazione, iniziò per Bley un approfondimento della forma e delle potenzialità della formazione in trio\footcite[98]{stopping}. Il primo passo in questa direzione, \textit{\textbf{Closer}} [ESP-disk 1965] con il già citato Steve Swallow e Barry Altcschul (batteria). Per il disco Bley adottò, in controtendenza con il \textit{free} dell'epoca, la scelta di limitare la lunghezza dei soli ottenendo così una \textit{tracklist} più folta e con una maggiore varietà di temi e atmosfere\footnote{Bley, tra i cui difetti non si può certo annoverare la modestia, equipara \textit{Closer} ai dischi di Albert Ayler a livello di importanza storica per il jazz. \cite[100]{stopping}.}. Grazie al sostegno della ESP, Bley potè portare il proprio trio (con Kent Carter al basso) in Europa per un tour nello stesso anno).\par
@@ -55,9 +55,17 @@ Paradossalmente, in Europa Bley trovò sempre un'accoglienza migliore rispetto a
 \begin{fquote}
 	Suonavo tutto io. Niente fiati. Finalmente potevo mettere in pratica le \text{mie} idee di free jazz. [...] Questo trio poteva aprire le finestre e dare ossigeno a tradizioni che avevano raggiunto un blocco.\footcite[106]{stopping}
 \end{fquote}
-
-
-
+Nel 1969 l'attenzione di Bley venne catturata dai sintetizzatori con tastiera (che iniziavano in quegli anni ad apparire sul mercato). Dopo aver convinto Robert Moog in persona a procurargli uno dei pochi esemplari di sintetizzatore semi-modulare in produzione dall'azienda\footcite[110]{stopping}, Bley e Peacock iniziarono ad esplorare le potenzialità dello strumento. I due iniziarono una serie di esibizioni (il \textit{Bley - Peacock synthesizer show} in cui Peacock, tra l'altro, fu pioniera della tecnica della sintesi vocale) anche in Europa. In particolare, Peacock fu notata da David Bowie proprio in virtù delle sue sperimentazioni vocali. I risultati di queste esplorazioni sono negli album \textbf{\textit{Improvisie}} [America 1971], \textit{\textbf{Dual Unity}} [Freedom Records 1972] e il primo album solista di Peacock \textit{\textbf{I am the one}} [RCA 1972]. La fine di questo periodo marcò anche la fine della relazione tra Bley e Peacock.\par
+Nello stesso anno il discografico Manfred Eicher, della casa tedesca ECM, propose a Bley un disco in pianoforte solo per il catalogo dedicato\footcite[119]{stopping} (in cui già facevano novero Chick Corea e Keith Jarrett). Nonostante Bley non avesse mai prodotto nessun lavoro nella forma del piano solo, il risultante \textit{\textbf{Open, to Love}} è considerato uno dei punti più significativi della carriera del pianista\footcite[75]{cappelletti}. Il disco, contente brani di Carla Bley, di Peacock e dello stesso Paul, offre una summa della proposta pianistica dell'artista condensata in una forma ancora più diretta del trio.\par
+Durante una permanenza a Copenhagen dove Bley registrò con il bassista autoctono Niels-Henning Ørsted Pedersen il disco \textit{\textbf{Paul Bley/NHØP}} [SteepleChase Records 1973], il pianista conobbe l'artista visuale Carol Goss, che sarebbe diventata la sua terza (e ultima) moglie. Dopo essere scampato a un incendio nella sua abitazione di New York (durante il quale Bley rischiò la vita per salvare il sintetizzatore in cui a suo dire non era nemmeno più interessato\footcite[120]{stopping}), Bley e Gross fondarono la compagnia di registrazioni audio-video Improvising Artists Inc. la cui idea era quella di invitare piccole ensemble di musicisti di estrazione trasversale al \textit{free} come Sun Ra, Sam Rivers o Lee Konitz. Curiosamente, la prima registrazione esistente degli allora giovanissimi Jaco Pastorius e Pat Metheny appartiene proprio alla neonata etichetta di Bley (il disco \textit{\textbf{Jaco}} [Improvising Artists 1974]). L'etichetta fu anche promotrice dei primi pioneristici esperimenti di perfomance audio-visiva in ambito jazz ad opera di Goss: n particolare nel 1977 Sun Ra e Bley presero parte a questa performance ibrida di musisciti e sintetizzatori video\footcite[129]{stopping}. In quel periodo, il successo dei dischi più orientati a un sound elettrico (non solo della sua etichetta, ma in generale per le direzioni intraprese da pianisti come Joe Zawinul, Herbie Hancock e Chick Corea) spinse Bley a scegliere di differenziarsi focalizzando i suoi sforzi sul pianoforte acustico\footcite[127]{stopping}. \par
+Dopo sette anni di attività discografica, Bley e Goss decisero di chiudere la società per concentrarsi sulla propria produzione artistica e sul proprio matrimonio\footcite[132]{stopping}.\par
+\section{Il tramonto della carriera: tour e insegnamento}
+L'esperienza di \textit{business} maturata negli anni e il fitto network di conoscenze tra musicisti di Bley gli permisero, alla soglia degli anni '80, di intraprendere una fitta stagione di concerti e di \textit{reunion.} Tra queste, una sfortunata tournée con Chet Baker nel 1985 (trent'anni dopo la loro prima collaborazione), in cui Bley ebbe l'esperienza di un trombettista ormai non più in condizione di reggere un tour a causa della sua tossicodipendenza\footcite[137]{stopping}. \\
+Nel 1989 l'editor del \textit{Jazz Magazine} parigino Phillipe Carles organizzò una riunione del progetto Jimmy Giuffre 3 con Steve Swallow (ora al basso elettrico e marito di Carla Bley) in Europa, dove a differenza degli anni '60 venne ora accolto tra gli onori generali\footcite[137]{stopping}. Dall'esperienza furono prodotti i dischi \textit{\textbf{The Life of a Trio: Saturday}} [Owl Records 1990] e \textit{\textbf{The Life of a Trio: Sunday}} [Owl Records 1990]. \par
+È a questo periodo che risale la fase più prolifica, a livello di registrazioni, di Bley: adducendo come causa di questo nuovo desiderio di entrare in sala di registrazione il fatto di aver ridotto al minimo le occasioni di suonare. Questi anni di attività corrispondono anche a un approccio più rilassato e meno competitivo di Bley rispetto alla pratica pianistica e alla scena jazz\footcite[82]{cappelletti}.\par
+Nel 1993 Bley ritorna eccezionalmente al sintetizzatore (questa volta, però, digitale) ventidue anni dopo il suo ultimo disco elettronico nel 1971\footcite[148]{stopping}
+. Il risultato è \textit{\textbf{Synth-Thesis}} [Postcard Records 1993]. Nello stesso anno, nonostante le proprie reticenze verso l'insegnamento, accetta una sporadica cattedra al Conservatorio del New England a Boston (lo stesso dove Giuffre aveva insegnato per anni). Tra i suoi allievi più illustri figurano la pianista giapponese Satoko Fujii e il compositore israeliano Yitzhak Yedid.\par
+Paul Bley morì il 3 gennaio 2016 nella sua casa a Stuart, in Florida, di cause naturali.
 
 
 
