--- a/Tesi pf/discografia.tex
+++ b/Tesi pf/discografia.tex
@@ -12,4 +12,14 @@
 	\item Paul Bley, \textsc{Barrage} [ESP-disk 1964] 
 	\item Paul Bley, \textsc{Closer} [ESP-disk 1965] 
 	\item Paul Bley, \textsc{Ramblin'} [RCA Italia 1966]
+	\item Paul Bley, \textsc{Improvisie} [America 1971]
+	\item Annette \& Paul Bley, \textsc{Dual Unity} [Freedom Records 1972]
+	\item Annette Peacock, \textsc{I'm the One'} [RCA 1972]
+	\item Paul Bley, \textsc{Open, to Love} [ECM 1972]
+	\item Paul Bley \& Niels-Henning Ørsted Pedersen, \textsc{Paul Bley/NHØP} [SteepleChase Records 1973]
+	\item Paul Bley, Bill Connors, Jimmy Giuffre, \textsc{Quiet song} [Improvising Artists 1974]
+	\item Paul Bley, Steve Swallow \& Jimmy Giuffre, \textsc{The Life of a Trio: Saturday} [Owl Records 1990]
+	\item Paul Bley, Steve Swallow \& Jimmy Giuffre, \textsc{The Life of a Trio: Sunday} [Owl Records 1990]
+	\item Paul Bley, Steve Swallow \& Jimmy Giuffre, \textsc{Fly away little bird} [Owl Records 1992]
+	\item Paul Bley, Steve Swallow \& Jimmy Giuffre, \textsc{Conversations with a Goose} [Soul Note 1996]
 \end{itemize}
