txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -15,6 +15,12 @@ Let's have a fucking party!
 		
 		\hfill Kotatsu
 	\end{preface}
+\section{Brownian Motion}	
+	\subsection{Continuity of stochastic processes}.
+	The sample path in a discrete scenario is given by
+	\begin{equation*}
+		\pr
+	\end{equation*}
 	\tableofcontents
 \clearpage
 \listoffigures  
