txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -15,8 +15,9 @@ Let's have a fucking party!
 		
 		\hfill Kotatsu
 	\end{preface}
-\section{Brownian Motion}	
-	\subsection{Continuity of stochastic processes}.
+	\clearpage
+\chapter{Brownian Motion}	
+	\section{Continuity of stochastic processes}.
 	The sample path in a discrete scenario is given by
 	\begin{equation*}
 		\pr(X(t)<x|\F_{s})=\pr(X(t)<x|X_{s})
