txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -17,7 +17,7 @@ Let's have a fucking party!
 	\end{preface}
 	\clearpage
 \chapter{Brownian Motion}	
-	\section{Continuity of stochastic processes}.
+	\section{Continuity of stochastic processes}
 	The sample path in a discrete scenario is given by
 	\begin{equation*}
 		\pr(X(t)<x|\F_{s})=\pr(X(t)<x|X_{s})
