txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -20,8 +20,12 @@ Let's have a fucking party!
 	\section{Continuity of stochastic processes}
 	The sample path in a discrete scenario is given by
 	\begin{equation*}
-		\pr(X(t)<x|\F_{s})=\pr(X(t)<x|X_{s})
+		\pr(X(t)<x|\F_{s})=\pr(X(t)<x|X_{s}).
 	\end{equation*}
+	This gives us a sample path like this:
+	IMMAGINE
+	We want to think, though, about a continuous space and time process: IMMAGINE
+	How can we define the continuity of the sample paths? and how can we check this property? There are some possible definitions of continuity. To control for their robustness we check whether according to each of these definitions the Poisson process, a discrete process, is correctly classified as non continuous.
 	\tableofcontents
 \clearpage
 \listoffigures  
