txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -43,6 +43,11 @@ Let's have a fucking party!
 			\begin{equation*}
 				N(t_2)-N(t_1)\independent N(t_4)-N(t_3)
 			\end{equation*}
+			meaning that the increments are independent;
+			\item for $\every h>0$ and $t>\tau$ it holds:
+			\begin{equation*}
+				N(t)-N(\tau)\sim N(t+h)-N(\tau+h).
+			\end{equation*}
 		\end{enumerate}
 	\end{definition}
 	\tableofcontents
