txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -46,8 +46,10 @@ Let's have a fucking party!
 			meaning that the increments are independent;
 			\item for $\every h>0$ and $t>\tau$ it holds:
 			\begin{equation*}
-				N(t)-N(\tau)\sim N(t+h)-N(\tau+h).
+				N(t)-N(\tau)\sim N(t+h)-N(\tau+h)
 			\end{equation*}
+			meaning that the increments are stationary (the origin start doesn't matter);
+			\item $\pr(N(t)=k)=\frac{(\lambda t)^{k}}{k!}e^{-\lambda t}$ for $k=0,1,\ldots$
 		\end{enumerate}
 	\end{definition}
 	\tableofcontents
