txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -49,7 +49,7 @@ Let's have a fucking party!
 				N(t)-N(\tau)\sim N(t+h)-N(\tau+h)
 			\end{equation*}
 			meaning that the increments are stationary (the origin start doesn't matter);
-			\item $\pr(N(t)=k)=\frac{(\lambda t)^{k}}{k!}e^{-\lambda t}$ for $k=0,1,\ldots$
+			\item we have $$\pr(N(t)=k)=\frac{(\lambda t)^{k}}{k!}e^{-\lambda t}\qquad\text{for } k=0,1,\ldots$$
 		\end{enumerate}
 	\end{definition}
 	\tableofcontents
