txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -52,6 +52,11 @@ Let's have a fucking party!
 			\item we have $$\pr(N(t)=k)=\frac{(\lambda t)^{k}}{k!}e^{-\lambda t}\qquad\text{for } k=0,1,\ldots$$
 		\end{enumerate}
 	\end{definition}
+	IMMAGINE\\
+	The inter-arrival times are i.i.d. \rv s distributed as
+	\begin{equation*}
+		T_i\distexp{\lambda}.
+	\end{equation*}
 	\tableofcontents
 \clearpage
 \listoffigures  
