txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -16,6 +16,7 @@ Let's have a fucking party!
 		\hfill Kotatsu
 	\end{preface}
 	\clearpage
+	\tableofcontents
 	\pagenumbering{arabic}
 \chapter{Brownian Motion}	
 	\section{Continuity of stochastic processes}
