txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -59,7 +59,13 @@ Let's have a fucking party!
 	\begin{equation*}
 		T_i\distexp{\lambda}.
 	\end{equation*}
-	\tableofcontents
+	The continuity of sample paths can be characterized in four different ways:
+	\begin{enumerate}
+		\item \emph{Continuity in mean squares}: we have this if for $\every t\geq0$ we have
+		\begin{equation*}
+			\lim_{s\to t}\ev[|X(t)-X(s)|^{2}]=0.
+		\end{equation*}
+	\end{enumerate}
 \clearpage
 \listoffigures  
 \end{document} 
