txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -63,7 +63,7 @@ Let's have a fucking party!
 	\begin{enumerate}
 		\item \emph{Continuity in mean squares}: we have this if for $\every t\geq0$ we have
 		\begin{equation*}
-			\lim_{s\to t}\ev[|X(t)-X(s)|^{2}]=0.
+			\lim_{s\to t}\ev\left[|X(t)-X(s)|^{2}\right]=0.
 		\end{equation*}
 	\end{enumerate}
 \clearpage
