txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -65,6 +65,12 @@ Let's have a fucking party!
 		\begin{equation*}
 			\lim_{s\to t}\ev\left[|X(t)-X(s)|^{2}\right]=0.
 		\end{equation*}
+		So according to this definition, the mean square of the distance goes to 0 if we go near $s$.
+		\item \emph{Continuity in probability}: we have this if for $\every t\geq0$ and $\every\varepsilon>0$ we have
+		\begin{equation*}
+			\lim_{s\to t}\pr(|X(t)-X(s)|>\varepsilon)=0.
+		\end{equation*}
+		This should be enough for all finite distributions, right?
 	\end{enumerate}
 \clearpage
 \listoffigures  
