txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -70,7 +70,7 @@ Let's have a fucking party!
 		\begin{equation*}
 			\lim_{s\to t}\pr(|X(t)-X(s)|>\varepsilon)=0.
 		\end{equation*}
-		This should be enough for all finite distributions, right?
+		This should be enough for all finite distributions, right?\footnote{First, but not last, question without an answer.}
 	\end{enumerate}
 \clearpage
 \listoffigures  
