txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -81,6 +81,12 @@ Let's have a fucking party!
 				\end{equation*}
 				is continuous on its diagonal set.
 			\end{enumerate}
+			\begin{fancyproof}
+				Consider the expectation
+				\begin{equation*}
+					\ev\left[|X(t)-X(s)|^{2}\right]=\ev\left[|X^{2}(s)+X^{2}(t)-2X(t)X(s)|\right]\tag{\faAcquisitionsIncorporated}
+				\end{equation*}
+			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
 \clearpage
