txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -84,7 +84,7 @@ Let's have a fucking party!
 			\begin{fancyproof}
 				Consider the expectation
 				\begin{equation*}
-					\ev\left[|X(t)-X(s)|^{2}\right]=\ev\left[|X^{2}(s)+X^{2}(t)-2X(t)X(s)|\right]\tag{\faAcquisitionsIncorporated}
+					\ev\left[|X(t)-X(s)|^{2}\right]=\ev\left[|X^{2}(s)+X^{2}(t)-2X(t)X(s)|\right]\tag{\faAdjust}
 				\end{equation*}
 			\end{fancyproof}
 		\end{theorem}
