txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -412,10 +412,10 @@
 		colback=red!5!white,sharp corners, colframe=white,
 		breakable,
 		drop shadow,
-		boxed title style={interior style={fill overzoom image=scrapped},sharp corners},
+		boxed title style={interior style={grat},sharp corners},
 		coltitle=black,
 		fonttitle=\bfseries\itshape,
-		interior style={fill tile image*={width=1.1\linewidth}{squares}},
+		interior style={gray!20},
 		frame style={white},
 		title={Proof}}	
 		
