--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -412,7 +412,7 @@
 		colback=red!5!white,sharp corners, colframe=white,
 		breakable,
 		drop shadow,
-		boxed title style={interior style={grat},sharp corners},
+		boxed title style={interior style={gray},sharp corners},
 		coltitle=black,
 		fonttitle=\bfseries\itshape,
 		interior style={gray!20},
