--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -84,7 +84,11 @@ Let's have a fucking party!
 			\begin{fancyproof}
 				Consider the expectation
 				\begin{equation*}
-					\ev\left[|X(t)-X(s)|^{2}\right]=\ev\left[|X^{2}(s)+X^{2}(t)-2X(t)X(s)|\right]\tag{\faAdjust}
+					\ev\left[|X(t)-X(s)|^{2}\right]=\ev\left[|X^{2}(s)+X^{2}(t)-2X(t)X(s)|\right]\tag{\faAdjust}\label{boh}
+				\end{equation*}
+				but
+				\begin{equation*}
+					\ev\left[X_{^{2}(s)}\right]=\ubracketthin{\ev\left[(X(s)-m(s))^{2}\right]}_{\Gamma(s,s)}+2m(s)\ev\left[X(s)-m^{2}(s)\right]
 				\end{equation*}
 			\end{fancyproof}
 		\end{theorem}
