txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -88,7 +88,7 @@ Let's have a fucking party!
 				\end{equation*}
 				but
 				\begin{equation*}
-					\ev\left[X_{^{2}(s)}\right]=\ubracketthin{\ev\left[(X(s)-m(s))^{2}\right]}_{\Gamma(s,s)}+2m(s)\ev\left[X(s)-m^{2}(s)\right]
+					\ev\left[X^{2}(s)\right]=\ubracketthin{\ev\left[(X(s)-m(s))^{2}\right]}_{\Gamma(s,s)}+2m(s)\ev\left[X(s)-m^{2}(s)\right]
 				\end{equation*}
 			\end{fancyproof}
 		\end{theorem}
